event comments now hidden. seems like an unnecessary feature. audio previews are behind a button gateway to prevent huge downloads formatting tweaks

--- a/03-blitz/cmdb2/public/global.css
+++ b/03-blitz/cmdb2/public/global.css
@@ -641,8 +641,10 @@ div.instrumentListVertical .instrumentAndPrimaryContainer {
 }
 
 .contentSection.event.visibility-public>.header {
-  background-color: var(--visibility-public-bgcolor);
-  color: var(--visibility-public-color);
+  background-color: #eee;
+  color: black;
+  /* background-color: var(--visibility-public-bgcolor);
+  color: var(--visibility-public-color); */
 }
 
 
